Add validator for checking for open tasks in a PR
This validator is supposed to be invoked on the pull_request event.
It checks whether the message body in the pull request has open tasks
in it.  If so, it blocks the PR from being merged.

--- a/github-webhooks/serverless.yml
+++ b/github-webhooks/serverless.yml
@@ -31,3 +31,10 @@ functions:
           path: github-python-requirements
           method: post
           cors: true
+  openTasksValidator:
+    handler: handler.openTasks
+    events:
+      - http:
+          path: github-tasks
+          method: post
+          cors: true
